--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <resources>
     <string name="app_name">SchoolMgr</string>
+    <string name="title_activity_main">Main Activity</string>
+    <string name="title_activity_config">Config Activity</string>
+
     <string name="action_settings">Settings</string>
     <string name="action_edit">Edit</string>
     <string name="action_save_changes">Save changes</string>
@@ -169,7 +172,6 @@
     <string name="rbAllData">All data</string>
     <string name="rbBackupToday">Today\'s data</string>
     <string name="rbBackupSince">Data since:</string>
-    <string name="title_activity_config">ConfigActivity</string>
     <string name="section_format">Hello World from section: %1$d</string>
 
 </resources>
